<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navE_Resources"
            android:title="@string/e_resources" />

        <item
            android:id="@+id/navServices"
            android:title="@string/services" />

        <item
            android:id="@+id/navOnlineLearning"
            android:title="@string/online_learning" />

        <item
            android:id="@+id/navOpenAccess"
            android:title="@string/open_access" />

        <item
            android:id="@+id/navNetwork"
            android:title="@string/network"/>

    </group>

    <item android:title="@string/misc">
        <menu>
            <item
                android:id="@+id/navAbout"
                android:title="@string/about" />
            <item
                android:id="@+id/bookReqForm"
                android:title="@string/book_req_form" />
            <item
                android:id="@+id/navFeedback"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
