<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EBooks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_website"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/collectionsArchive"
            android:text="@string/collections_archive"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/collegeTextbooks"
            android:text="@string/college_textbooks"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/eBooksDir"
            android:text="@string/e_books_directory"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/googleBooks"
            android:text="@string/google_books"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/googleScholar"
            android:text="@string/google_scholar"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/gutenberg"
            android:text="@string/gutenberg"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/intechBooks"
            android:text="@string/intech_books"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/openEduRes"
            android:text="@string/open_edu_resources"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/openTextbooks"
            android:text="@string/open_textbooks"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/worldEBook"
            android:text="@string/world_e_books"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/openLib"
            android:text="@string/open_lib"
            style="@style/text_views_links_fragment" />

    </LinearLayout>

</ScrollView>