<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EJournals">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_website"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/academicJournals"
            android:text="@string/academic_journals"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/aircc"
            android:text="@string/aircc"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/nopr"
            android:text="@string/nopr"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/journalsSeek"
            android:text="@string/journals_seek"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/ncert"
            android:text="@string/ncert"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/eJournalLink"
            android:text="@string/e_journals"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/onlineJournals"
            android:text="@string/online_journals"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/ias"
            android:text="@string/ias"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/worldSci"
            android:text="@string/world_sci"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/southAsia"
            android:text="@string/south_asia"
            style="@style/text_views_links_fragment" />

    </LinearLayout>

</ScrollView>