<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Theses">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_website"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/shodhganga"
            android:text="@string/shodhganga"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/digitalRepos"
            android:textAlignment="center"
            android:text="@string/digital_repos"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/shodhgangotri"
            android:text="@string/shodhgangotri"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/onlineDigital"
            android:text="@string/online_digital"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/openAccessTheses"
            android:textAlignment="center"
            android:text="@string/open_access_theses"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/intTheses"
            android:text="@string/int_theses"
            style="@style/text_views_links_fragment" />

        <TextView
            android:id="@+id/dartEurope"
            android:text="@string/dart_europe"
            style="@style/text_views_links_fragment" />

    </LinearLayout>

</ScrollView>