<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1D6D0"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OnlineLearning"
    tools:showIn="@layout/app_bar_online_learning">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_website"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/ePath"
            android:text="@string/e_Path"
            style="@style/text_views_links" />

        <TextView
            android:id="@+id/swayam"
            android:text="@string/swayam"
            style="@style/text_views_links"/>

        <TextView
            android:id="@+id/vidwan"
            android:text="@string/vidwan"
            style="@style/text_views_links"/>

        <TextView
            android:id="@+id/eAcharya"
            android:text="@string/e_acharya"
            style="@style/text_views_links"/>

        <TextView
            android:id="@+id/nptel"
            android:text="@string/nptel"
            style="@style/text_views_links"/>

        <TextView
            android:id="@+id/vidyaMitra"
            android:text="@string/vidya_mitra"
            style="@style/text_views_links"/>

    </LinearLayout>

</LinearLayout>