<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF0F1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutActivity"
    tools:showIn="@layout/app_bar_about">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/intro"
            style="@style/toggle_button"
            android:layout_marginTop="4dp"
            android:textOff="@string/intro"
            android:textOn="@string/intro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/introText"
                style="@style/toggle_text_views" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/visionMission"
            style="@style/toggle_button"
            android:layout_marginTop="16dp"
            android:textOff="@string/vision_mission"
            android:textOn="@string/vision_mission" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/visionMissionText"
                style="@style/toggle_text_views" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/userFacilities"
            style="@style/toggle_button"
            android:layout_marginTop="16dp"
            android:textOff="@string/user_facilities"
            android:textOn="@string/user_facilities" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/userFacilitiesText"
                style="@style/toggle_text_views" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/nuAtGlance"
            style="@style/toggle_button"
            android:layout_marginTop="16dp"
            android:textOff="@string/nu_at_glance"
            android:textOn="@string/nu_at_glance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/nuAtGlanceText"
                style="@style/toggle_text_views" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/advisory"
            style="@style/toggle_button"
            android:layout_marginTop="16dp"
            android:textOff="@string/advisory"
            android:textOn="@string/advisory" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/advisoryText"
                style="@style/toggle_text_views" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/collection"
            style="@style/toggle_button"
            android:layout_marginTop="16dp"
            android:textOff="@string/collection"
            android:textOn="@string/collection" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/collectionText"
                style="@style/toggle_text_views" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/generalRules"
            style="@style/toggle_button"
            android:layout_marginTop="16dp"
            android:textOff="@string/general_rules"
            android:textOn="@string/general_rules" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/generalRulesText"
                style="@style/toggle_text_views"
                android:layout_marginBottom="8dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>